[project]
name = "poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "numpy>=2.3.2",
    "openai>=1.99.1",
    "pandas>=2.3.1",
    "prompt-toolkit>=3.0.51",
    "psycopg2>=2.9.10",
    "pymongo>=4.13.2",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.0",
    "redis>=6.3.0",
    "smolagents[docker]>=1.20.0",
    "sqlalchemy>=2.0.42",
]
